# Math-Interactivity

./: 3dObject.cpp  3dObject.h  CMakeLists.txt  DotHandler.cpp  DotHandler.h  Makefile  README.md  ShaderTest  camera.cpp  camera.h  main.cpp  shaderEngine.cpp  shaderEngine.h
debug/: 3DEngine  CMakeCache.txt  Makefile  cmake_install.cmake
objLoader/: objLoader.cpp  objLoader.h
shaders/: fragmentShader.glsl  vertexShader.glsl
src/: Camera.cpp  Camera.h  DotHandler.cpp  DotHandler.h  Engine3D.cpp  Engine3D.h  Object3D.cpp  Object3D.h  PremitiveGenerator.cpp  PremitiveGenerator.h  Render.cpp  Render.h  main.cpp  mesh.h
